fix: 修复一些问题

--- a/static/template/email.html
+++ b/static/template/email.html
@@ -29,8 +29,8 @@
     </table>
 
     <br>
-    工单详情：https://flow.bytecho.net/#/process/handle-ticket?workOrderId={{ .Id }}&processId={{ .ProcessId }}
-    <!-- <a href="{{ .Domain }}/#/process/handle-ticket?workOrderId={{ .Id }}&processId={{ .ProcessId }}" target="_blank">点击此处跳转到工单详情</a> -->
+    <!-- 工单详情：https://flow.bytecho.net/#/process/handle-ticket?workOrderId={{ .Id }}&processId={{ .ProcessId }} -->
+    <a href="https://{{ .Domain }}/#/process/handle-ticket?workOrderId={{ .Id }}&processId={{ .ProcessId }}" target="_blank">点击此处跳转到工单详情</a>
 </body>
 <style>
     table {
